@@ -6,7 +6,16 @@ Silva changes
   Silva 1.6.x (SVN/UNRELEASED)
 
     Features added:
-
+      - Fixed minor bugs in kupu table toolbox where the column widths field did
+        not get updated (issue 1577)
+        
+      - Fixed bug in scaling of images, where images with a scaling of 100%
+        would return the modification date of the original hires image, creating
+        problems with caching (issue 1557)
+      
+      - Disabled custom kupu context menu, so that the original browser context
+        menu is shown. This allows firefox users to use the firefox spellchecker
+      
       - Changed the lang attribute of the layout macro html tag to get the lang
         from metadata, as in: https://infrae.com/issue/silva/issue1566
         Lower cased the language codes in the metadata set, as in:
